k8s/base/netpol/allow-egress-external.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-external
  namespace: imgr
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - backend
          - worker
  policyTypes:
    - Egress
  egress:
    # Exclusion: empeche un pod compromis d'atteindre des cibles internes 
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5671
