k8s/base/netpol/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: imgr
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
